Added chapters up to the end of part 'Effective Rust'

--- a/src/bibliography.tex
+++ b/src/bibliography.tex
@@ -1,7 +1,8 @@
 This is a reading list of material relevant to Rust. It includes prior research that has - at one time or another - 
 influenced the design of Rust, as well as publications about Rust.
 
-\subsection{Type system}
+
+\subsection*{Type system}
 
 \begin{itemize}
   \item{\href{http://209.68.42.137/ucsd-pages/Courses/cse227.w03/handouts/cyclone-regions.pdf}
@@ -19,7 +20,7 @@ influenced the design of Rust, as well as publications about Rust.
 \end{itemize}
 
 
-\subsection{Concurrency}
+\subsection*{Concurrency}
 
 \begin{itemize}
   \item{\href{https://research.microsoft.com/pubs/69431/osr2007\_rethinkingsoftwarestack.pdf}
@@ -50,7 +51,7 @@ influenced the design of Rust, as well as publications about Rust.
   \item{\href{https://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-579.pdf}{Epoch-based reclamation.}}
 \end{itemize}
 
-\subsection{Others}
+\subsection*{Others}
 
 \begin{itemize}
   \item{\href{https://www.usenix.org/legacy/events/hotos03/tech/full\_papers/candea/candea.pdf}{Crash-only software}}
@@ -58,7 +59,7 @@ influenced the design of Rust, as well as publications about Rust.
   \item{\href{http://people.cs.umass.edu/\%7Eemery/pubs/berger-oopsla2002.pdf}{Reconsidering Custom Memory Allocation}}
 \end{itemize}
 
-\subsection{Papers about Rust}
+\subsection*{Papers about Rust}
 
 \begin{itemize}
   \item{\href{http://www.cs.indiana.edu/\%7Eeholk/papers/hips2013.pdf}{GPU Programming in Rust: Implementing High Level 
