--- a/src/effective_rust.tex
+++ b/src/effective_rust.tex
@@ -5,30 +5,50 @@ So you've learned how to write some Rust code. But there's a difference between 
 This chapter consists of relatively independent tutorials which show you how to take your Rust to the next level. Common patterns 
 and standard library features will be introduced. Read these sections in any order of your choosing.
 
-\subsection{The Stack and the Heap}
+\section{The Stack and the Heap}
 \label{sec:effective_stackAndHeap}
 \input{src/effective_rust/stack_and_heap.tex}
 
-\subsection{Testing}
+\section{Testing}
 \label{sec:effective_testing}
 \input{src/effective_rust/testing.tex}
 
-\subsection{Conditional Compilation}
+\section{Conditional Compilation}
 \label{sec:effective_conditionalCompilation}
 \input{src/effective_rust/conditional_compilation.tex}
 
-\subsection{Documentation}
+\section{Documentation}
 \label{sec:effective_documentation}
 \input{src/effective_rust/documentation.tex}
 
-\subsection{Iterators}
+\section{Iterators}
 \label{sec:effective_iterators}
 \input{src/effective_rust/iterators.tex}
 
-\subsection{Concurrency}
+\section{Concurrency}
 \label{sec:effective_concurrency}
 \input{src/effective_rust/concurrency.tex}
 
-\subsection{Error Handling}
+\section{Error Handling}
 \label{sec:effective_errorHandling}
 \input{src/effective_rust/error_handling.tex}
+
+\section{Choosing your Guarantees}
+\label{sec:effective_choosingYourGuarantees}
+\input{src/effective_rust/choosing_your_guarantees.tex}
+
+\section{Foreign Function Interface}
+\label{sec:effective_FFI}
+\input{src/effective_rust/ffi.tex}
+
+\section{Borrow and AsRef}
+\label{sec:effective_borrowAndAsRef}
+\input{src/effective_rust/borrow_and_asref.tex}
+
+\section{Release Channels}
+\label{sec:effective_releaseChannels}
+\input{src/effective_rust/release_channels.tex}
+
+\section{Using Rust without the Standard Library}
+\label{sec:effective_rustWithoutStdLib}
+\input{src/effective_rust/rust_without_standard_lib.tex}
