--- a/src/syntax.tex
+++ b/src/syntax.tex
@@ -9,146 +9,146 @@ If you'd like to learn Rust from the bottom up, reading this in order is a great
 These sections also form a reference for each concept, so if you're reading another tutorial and find something confusing, 
 you can find it explained somewhere in here.
 
-\subsection{Variable Bindings}
+\section{Variable Bindings}
 \label{sec:syntax_variableBindings}
 \input{src/syntax/variable_bindings.tex}
 
-\subsection{Functions}
+\section{Functions}
 \label{sec:syntax_functions}
 \input{src/syntax/functions.tex}
 
-\subsection{Primitive Types}
+\section{Primitive Types}
 \label{sec:syntax_primitives}
 \input{src/syntax/primitives.tex}
 
-\subsection{Comments}
+\section{Comments}
 \label{sec:syntax_comments}
 \input{src/syntax/comments.tex}
 
-\subsection{If}
+\section{If}
 \label{sec:syntax_if}
 \input{src/syntax/if.tex}
 
-\subsection{Loops}
+\section{Loops}
 \label{sec:syntax_loops}
 \input{src/syntax/loops.tex}
 
-\subsection{Ownership}
+\section{Ownership}
 \label{sec:syntax_ownership}
 \input{src/syntax/ownership.tex}
 
-\subsection{References and Borrowing}
+\section{References and Borrowing}
 \label{sec:syntax_referencesBorrowing}
 \input{src/syntax/references_borrowing.tex}
 
-\subsection{Lifetimes}
+\section{Lifetimes}
 \label{sec:syntax_lifetimes}
 \input{src/syntax/lifetimes.tex}
 
-\subsection{Mutability}
+\section{Mutability}
 \label{sec:syntax_mutability}
 \input{src/syntax/mutability.tex}
 
-\subsection{Structs}
+\section{Structs}
 \label{sec:syntax_structs}
 \input{src/syntax/structs.tex}
 
-\subsection{Enums}
+\section{Enums}
 \label{sec:syntax_enums}
 \input{src/syntax/enums.tex}
 
-\subsection{Match}
+\section{Match}
 \label{sec:syntax_match}
 \input{src/syntax/match.tex}
 
-\subsection{Patterns}
+\section{Patterns}
 \label{sec:syntax_patterns}
 \input{src/syntax/patterns.tex}
 
-\subsection{Method Syntax}
+\section{Method Syntax}
 \label{sec:syntax_methodSyntax}
 \input{src/syntax/method_syntax.tex}
 
-\subsection{Vectors}
+\section{Vectors}
 \label{sec:syntax_vectors}
 \input{src/syntax/vectors.tex}
 
-\subsection{Strings}
+\section{Strings}
 \label{sec:syntax_strings}
 \input{src/syntax/strings.tex}
 
-\subsection{Generics}
+\section{Generics}
 \label{sec:syntax_generics}
 \input{src/syntax/generics.tex}
 
-\subsection{Traits}
+\section{Traits}
 \label{sec:syntax_traits}
 \input{src/syntax/traits.tex}
 
-\subsection{Drop}
+\section{Drop}
 \label{sec:syntax_drop}
 \input{src/syntax/drop.tex}
 
-\subsection{if let}
+\section{if let}
 \label{sec:syntax_iflet}
 \input{src/syntax/iflet.tex}
 
-\subsection{Trait Objects}
+\section{Trait Objects}
 \label{sec:syntax_traitObjects}
 \input{src/syntax/trait_objects.tex}
 
-\subsection{Closures}
+\section{Closures}
 \label{sec:syntax_closures}
 \input{src/syntax/closures.tex}
 
-\subsection{Universal Function Call Syntax}
+\section{Universal Function Call Syntax}
 \label{sec:syntax_universalFunctionCallSyntax}
 \input{src/syntax/universal_function_call_syntax.tex}
 
-\subsection{Crates and Modules}
+\section{Crates and Modules}
 \label{sec:syntax_cratesAndModules}
 \input{src/syntax/crates_and_modules.tex}
 
-\subsection{'const' and 'static'}
+\section{'const' and 'static'}
 \label{sec:syntax_constAndStatic}
 \input{src/syntax/const_and_static.tex}
 
-\subsection{Attributes}
+\section{Attributes}
 \label{sec:syntax_attributes}
 \input{src/syntax/attributes.tex}
 
-\subsection{'type' Aliases}
+\section{'type' Aliases}
 \label{sec:syntax_typeAliases}
 \input{src/syntax/type_aliases.tex}
 
-\subsection{Casting Between Types}
+\section{Casting Between Types}
 \label{sec:syntax_casting}
 \input{src/syntax/casting.tex}
 
-\subsection{Associated Types}
+\section{Associated Types}
 \label{sec:syntax_associatedTypes}
 \input{src/syntax/assoc_types.tex}
 
-\subsection{Unsized Types}
+\section{Unsized Types}
 \label{sec:syntax_unsizedTypes}
 \input{src/syntax/unsized_types.tex}
 
-\subsection{Operators and Overloading}
+\section{Operators and Overloading}
 \label{sec:syntax_operatorsAndOverloading}
 \input{src/syntax/operators_and_overloading.tex}
 
-\subsection{'Deref' coercions}
+\section{'Deref' coercions}
 \label{sec:syntax_derefCoercions}
 \input{src/syntax/deref_coercions.tex}
 
-\subsection{Macros}
+\section{Macros}
 \label{sec:syntax_macros}
 \input{src/syntax/macros.tex}
 
-\subsection{Raw Pointers}
+\section{Raw Pointers}
 \label{sec:syntax_rawPointers}
 \input{src/syntax/raw_pointers.tex}
 
-\subsection{Unsafe}
+\section{Unsafe}
 \label{sec:syntax_unsafe}
 \input{src/syntax/unsafe.tex}
