--- a/src/syntax/deref_coercions.tex
+++ b/src/syntax/deref_coercions.tex
@@ -82,7 +82,7 @@ foo(&owned);
 
 Vectors can \code{Deref} to a slice.
 
-\subsubsection*{Deref and method calls}
+\subsection*{Deref and method calls}
 
 \code{Deref} will also kick in when calling a method. Consider the following example.
 
