--- a/src/syntax/enums.tex
+++ b/src/syntax/enums.tex
@@ -51,7 +51,7 @@ Not supporting these operations may seem rather limiting, but it's a limitation 
 implementing equality ourselves, or by pattern matching variants with match expressions, which you'll learn in the next section. 
 We don't know enough about Rust to implement equality yet, but we'll find out in the traits section.
 
-\subsubsection*{Constructors as functions}
+\subsection*{Constructors as functions}
 
 An \enum\ constructor can also be used like a function. For example:
 
