--- a/src/syntax/generics.tex
+++ b/src/syntax/generics.tex
@@ -69,7 +69,7 @@ doesn't care, however.
 The \code{Result<T, E>} type is intended to be used to return the result of a computation, and to have the ability to return an error if it 
 didn't work out.
 
-\subsubsection*{Generic functions}
+\subsection*{Generic functions}
 
 We can write functions that take generic types with a similar syntax:
 
@@ -100,7 +100,7 @@ fn takes_two_things<T, U>(x: T, y: U) {
 }
 \end{rustc}
 
-\subsubsection*{Generic structs}
+\subsection*{Generic structs}
 
 You can store a generic type in a \struct\ as well:
 
