--- a/src/syntax/iflet.tex
+++ b/src/syntax/iflet.tex
@@ -44,7 +44,7 @@ if let Some(x) = option {
 }
 \end{rustc}
 
-\subsubsection*{\code{while let}}
+\subsection*{\code{while let}}
 
 In a similar fashion, \code{while let} can be used when you want to conditionally loop as long as a value matches a certain pattern. It 
 turns code like this:
