--- a/src/syntax/match.tex
+++ b/src/syntax/match.tex
@@ -54,7 +54,7 @@ let number = match x {
 
 Sometimes it's a nice way of converting something from one type to another; in this example the integers are converted to \String.
 
-\subsubsection*{Matching on enums}
+\subsection*{Matching on enums}
 
 Another important use of the \match\ keyword is to process the possible variants of an \enum:
 
