--- a/src/syntax/mutability.tex
+++ b/src/syntax/mutability.tex
@@ -52,7 +52,7 @@ let (mut x, y) = (5, 6);
 fn foo(mut x: i32) {
 \end{rustc}
 
-\subsubsection*{Interior vs. Exterior Mutability}
+\subsection*{Interior vs. Exterior Mutability}
 
 However, when we say something is 'immutable' in Rust, that doesn't mean that it's not able to be changed: we mean something has 
 'exterior mutability'. Consider, for example, \href{https://doc.rust-lang.org/std/sync/struct.Arc.html}{Arc<T>}:
