--- a/src/syntax/operators_and_overloading.tex
+++ b/src/syntax/operators_and_overloading.tex
@@ -71,7 +71,7 @@ let p: Point = // ...
 let x: f64 = p + 2i32;
 \end{rustc}
 
-\subsubsection*{Using operator traits in generic structs}
+\subsection*{Using operator traits in generic structs}
 
 Now that we know how operator traits are defined, we can define our \code{HasArea} trait and \code{Square} struct from the 
 traits chapter (see \nameref{sec:syntax_traits}) more generically:
