--- a/src/syntax/universal_function_call_syntax.tex
+++ b/src/syntax/universal_function_call_syntax.tex
@@ -62,7 +62,7 @@ f(&b)
 When we call a method like \code{b.f()} using method syntax (see \nameref{sec:syntax_methodSyntax}), Rust will automatically borrow 
 \code{b} if \code{f()} takes \code{\&self}. In this case, Rust will not, and so we need to pass an explicit \code{\&b}.
 
-\subsubsection*{Angle-bracket Form}
+\subsection*{Angle-bracket Form}
 
 The form of UFCS we just talked about:
 
