--- a/src/syntax/unsized_types.tex
+++ b/src/syntax/unsized_types.tex
@@ -37,7 +37,7 @@ Meaning, this implementation would only work for references (see \nameref{sec:sy
 With the \code{impl for str}, all pointers, including (at some point, there are some bugs to fix first) user-defined custom smart pointers, 
 can use this \code{impl}.
 
-\subsubsection*{?Sized}
+\subsection*{?Sized}
 
 If you want to write a function that accepts a dynamically sized type, you can use the special bound, \code{?Sized}:
 
