--- a/src/gettingstarted.tex
+++ b/src/gettingstarted.tex
@@ -1,7 +1,7 @@
 This first chapter of the book will get us going with Rust and its tooling. First, we'll install Rust. Then, the classic 
 'Hello World' program. Finally, we'll talk about Cargo, Rust's build system and package manager.
 
-\subsection{Installing Rust}
+\section{Installing Rust}
 
 The first step to using Rust is to install it. Generally speaking, you'll need an Internet connection to run the commands in 
 this section, as we'll be downloading Rust from the internet.
@@ -12,7 +12,7 @@ We'll be showing off a number of commands using a terminal, and those lines all 
 \code{\$}s, they are there to indicate the start of each command. We'll see many tutorials and examples around the web that follow 
 this convention: \code{\$} for commands run as our regular user, and \code{\#} for commands we should be running as an administrator.
 
-\subsubsection*{Platform support}
+\subsection*{Platform support}
 
 The Rust compiler runs on, and compiles to, a great number of platforms, though not all platforms are equally supported. 
 Rust's support levels are organized into three tiers, each with a different set of guarantees.
@@ -22,7 +22,7 @@ Rust's support levels are organized into three tiers, each with a different set 
 Platforms are identified by their \enquote{target triple} which is the string to inform the compiler what kind of output should 
 be produced. The columns below indicate whether the corresponding component works on the specified platform.
 
-\myparagraph{Tier 1}
+\subsubsection*{Tier 1}
 
 Tier 1 platforms can be thought of as \enquote{guaranteed to build and work}. Specifically they will each satisfy the 
 following requirements:
@@ -52,7 +52,7 @@ following requirements:
         \end{tabular}
 \end{table}
 
-\myparagraph{Tier 2}
+\subsubsection*{Tier 2}
 
 Tier 2 platforms can be thought of as \enquote{guaranteed to build}. Automated tests are not run so it's not guaranteed to produce a 
 working build, but platforms often work to quite a good degree and patches are always welcome! Specifically, these platforms are 
@@ -84,7 +84,7 @@ required to have each of the following:
     \end{tabular}
 \end{table}
 
-\myparagraph{Tier 3}
+\subsubsection*{Tier 3}
 
 Tier 3 platforms are those which Rust has support for, but landing changes is not gated on the platform either building or 
 passing tests. Working builds for these platforms may be spotty as their reliability is often defined in terms of 
@@ -121,7 +121,7 @@ infrastructure producing these in unofficial locations.
 
 Note that this table can be expanded over time, this isn't the exhaustive set of tier 3 platforms that will ever be!
 
-\subsubsection*{Installing on Linux or Mac}
+\subsection*{Installing on Linux or Mac}
 
 If we're on Linux or a Mac, all we need to do is open a terminal and type this:
 
@@ -150,11 +150,11 @@ Continue? (y/N)
 
 From here, press \code{y} for 'yes', and then follow the rest of the prompts.
 
-\subsubsection*{Installing on Windows}
+\subsection*{Installing on Windows}
 
 If you're on Windows, please download the appropriate \href{https://www.rust-lang.org/install.html}{installer}.
 
-\subsubsection*{Uninstalling}
+\subsection*{Uninstalling}
 
 Uninstalling Rust is as easy as installing it. On Linux or Mac, run the uninstall script:
 
@@ -164,7 +164,7 @@ $ sudo /usr/local/lib/rustlib/uninstall.sh
 
 If we used the Windows installer, we can re-run the \code{.msi} and it will give us an uninstall option.
 
-\subsubsection*{Troubleshooting}
+\subsection*{Troubleshooting}
 
 If we've got Rust installed, we can open up a shell, and type this:
 
@@ -197,7 +197,7 @@ Rustaceans (a silly nickname we call ourselves) who can help us out. Other great
 This installer also installs a copy of the documentation locally, so we can read it offline. On UNIX systems, \code{/usr/local/share/doc/rust} 
 is the location. On Windows, it's in a \code{share/doc directory}, inside the directory to which Rust was installed.
 
-\subsection{Hello, World!}
+\section{Hello, World!}
 
 Now that you have Rust installed, we'll help you write your first Rust program. It's traditional when learning a new language 
 to write a little program to print the text \enquote{Hello, world!} to the screen, and in this section, we'll follow that 
@@ -217,7 +217,7 @@ early on is good.
     check the documentation for your specific setup.
 \end{myquote}
 
-\subsubsection*{Creating a Project File}
+\subsection*{Creating a Project File}
 
 First, make a file to put your Rust code in. Rust doesn't care where your code lives, but for this book, I suggest making a 
 \emph{projects} directory in your home directory, and keeping all your projects there. Open a terminal and enter the following 
@@ -234,7 +234,7 @@ $ cd hello_world
 Note: If you're on Windows and not using PowerShell, the ~ may not work. Consult the documentation for your shell for more details.
 \end{myquote}
 
-\subsubsection*{Writing and Running a Rust Program}
+\subsection*{Writing and Running a Rust Program}
 
 Next, make a new source file and call it \emph{main.rs}. Rust files always end in a \emph{.rs} extension. If you're using more 
 than one word in your filename, use an underscore to separate them; for example, you'd use \emph{hello\_world.rs} rather than 
@@ -262,7 +262,7 @@ In Windows, replace \code{main} with \code{main.exe}. Regardless of your operati
 \code{Hello, world!} print to the terminal. If you did, then congratulations! You've officially written a Rust program. 
 That makes you a Rust programmer! Welcome.
 
-\subsubsection*{Anatomy of a Rust Program}
+\subsection*{Anatomy of a Rust Program}
 
 Now, let's go over what just happened in your \enquote{Hello, world!} program in detail. Here's the first piece of the puzzle:
 
@@ -315,7 +315,7 @@ The line ends with a semicolon (\code{;}). Rust is an \nameref{sec:gloss_express
 expressions, rather than statements. The \code{;} indicates that this expression is over, and the next one is ready 
 to begin. Most lines of Rust code end with a \code{;}.
 
-\subsubsection*{Compiling and Running are Separate Steps}
+\subsection*{Compiling and Running are Separate Steps}
 
 In \enquote{Writing and Running a Rust Program}, we showed you how to run a newly created program. We'll break that process 
 down and examine each step now.
@@ -368,7 +368,8 @@ Just compiling with \code{rustc} is fine for simple programs, but as your projec
 of the options your project has, and make it easy to share your code with other people and projects. Next, I'll introduce you 
 to a tool called Cargo, which will help you write real-world Rust programs.
 
-\subsection{Hello, Cargo!}
+\section{Hello, Cargo!}
+\label{sec:gettingstarted_helloCargo}
 
 Cargo is Rust's build system and package manager, and Rustaceans use Cargo to manage their Rust projects. Cargo manages 
 three things: building your code, downloading the libraries your code depends on, and building those libraries. We call 
@@ -393,7 +394,7 @@ $ cargo --version
 into a terminal. If you see a version number, great! If you see an error like '\code{command not found}', then you should look 
 at the documentation for the system in which you installed Rust, to determine if Cargo is separate.
 
-\subsubsection*{Converting to Cargo}
+\subsection*{Converting to Cargo}
 
 Let's convert the Hello World program to Cargo. To Cargo-fy a project, you need to do three things:
 
@@ -405,7 +406,7 @@ Let's convert the Hello World program to Cargo. To Cargo-fy a project, you need 
 
 Let's get started!
 
-\myparagraph{Creating a new Executable and Source Directory}
+\subsubsection*{Creating a new Executable and Source Directory}
 
 First, go back to your terminal, move to your \emph{hello\_world} directory, and enter the following commands:
 
@@ -431,7 +432,7 @@ This example retains \code{main.rs} as the source filename because it's creating
 library instead, you'd name the file \code{lib.rs}. This convention is used by Cargo to successfully compile your projects, 
 but it can be overridden if you wish.
 
-\myparagraph{Creating a Configuration File}
+\subsubsection*{Creating a Configuration File}
 
 Next, create a new file inside your \emph{hello\_world} directory, and call it \code{Cargo.toml}.
 
@@ -514,7 +515,7 @@ is especially true when you start using crates; these are synonymous with a 'lib
 For complex projects composed of multiple crates, it's much easier to let Cargo coordinate the build. Using Cargo, you can run 
 \code{cargo build}, and it should work the right way.
 
-\myparagraph{Building for Release}
+\subsubsection*{Building for Release}
 
 When your project is finally ready for release, you can use \code{cargo build --release} to compile your project with optimizations. 
 These optimizations make your Rust code run faster, but turning them on makes your program take longer to compile. This is why 
@@ -549,7 +550,7 @@ $ cd foo
 $ cargo build 
 \end{verbatim}
 
-\myparagraph{Making a new Cargo Project the Easy Way}
+\subsection*{Making a new Cargo Project the Easy Way}
 
 You don't have to go through that previous process every time you want to start a new project! Cargo can quickly make a 
 bare-bones project directory that you can start developing in right away.
@@ -603,7 +604,7 @@ Note: If you want to look at Cargo in more detail, check out the official \href{
 which covers all of its features.
 \end{myquote}
 
-\subsection{Closing Thoughts}
+\section{Closing Thoughts}
 
 This chapter covered the basics that will serve you well through the rest of this book, and the rest of your time with Rust. 
 Now that you've got the tools down, we'll cover more about the Rust language itself.
