--- a/src/syntax/method_syntax.tex
+++ b/src/syntax/method_syntax.tex
@@ -14,7 +14,7 @@ foo.bar().baz();
 Luckily, as you may have guessed with the leading question, you can! Rust provides the ability to use this 'method call syntax' via the 
 \code{impl} keyword.
 
-\subsubsection*{Method calls}
+\subsection*{Method calls}
 
 Here's how it works:
 
@@ -104,7 +104,7 @@ impl Circle {
 }
 \end{rustc}
 
-\subsubsection*{Chaining method calls}
+\subsection*{Chaining method calls}
 
 So, now we know how to call a method, such as \code{foo.bar()}. But what about our original example, \code{foo.bar().baz()}? This is called 
 'method chaining'. Let's look at an example:
@@ -143,7 +143,7 @@ fn grow(&self, increment: f64) -> Circle {
 
 We say we're returning a \code{Circle}. With this method, we can grow a new \code{Circle} to any arbitrary size.
 
-\subsubsection*{Associated functions}
+\subsection*{Associated functions}
 
 You can also define associated functions that do not take a \code{self} parameter. Here's a pattern that's very common in Rust code:
 
@@ -172,7 +172,7 @@ fn main() {
 This 'associated function' builds a new \code{Circle} for us. Note that associated functions are called with the \code{Struct::function()} 
 syntax, rather than the \code{ref.method()} syntax. Some other languages call associated functions 'static methods'.
 
-\subsubsection*{Builder Pattern}
+\subsection*{Builder Pattern}
 
 Let's say that we want our users to be able to create \code{Circles}, but we will allow them to only set the properties they care about. 
 Otherwise, the \x\ and \y\ attributes will be \code{0.0}, and the \code{radius} will be \code{1.0}. Rust doesn't have method overloading, 
