--- a/src/syntax/unsafe.tex
+++ b/src/syntax/unsafe.tex
@@ -38,7 +38,7 @@ unsafe impl Scary for i32 {}
 It's important to be able to explicitly delineate code that may have bugs that cause big problems. If a Rust program segfaults, you 
 can be sure the cause is related to something marked \code{unsafe}.
 
-\subsubsection*{What does 'safe' mean?}
+\subsection*{What does 'safe' mean?}
 
 Safe, in the context of Rust, means 'doesn't do anything unsafe'. It's also important to know that there are certain behaviors that 
 are probably not desirable in your code, but are expressly \emph{not} unsafe:
@@ -82,7 +82,7 @@ In addition, the following are all undefined behaviors in Rust, and must be avoi
   \item{Unwinding into Rust from foreign code or unwinding from Rust into foreign code.}
 \end{itemize}
 
-\subsubsection*{Unsafe Superpowers}
+\subsection*{Unsafe Superpowers}
 
 In both unsafe functions and unsafe blocks, Rust will let you do three things that you normally can not do. Just three. Here they are:
 
