--- a/src/tutorial.tex
+++ b/src/tutorial.tex
@@ -7,7 +7,7 @@ us. Sounds good?
 
 Along the way, we'll learn a little bit about Rust. The next chapter, 'Syntax and Semantics', will dive deeper into each part.
 
-\subsection{Set up}
+\section{Set up}
 
 Let's set up a new project. Go to your projects directory. Remember how we had to create our directory structure and a 
 \code{Cargo.toml} for \code{hello\_world}? Cargo has a command that does that for us. Let's give it a shot:
@@ -69,7 +69,7 @@ Hello, world!
 Great! The \code{run} command comes in handy when you need to rapidly iterate on a project. Our game is such a project, we 
 need to quickly test each iteration before moving on to the next one.
 
-\subsection{Processing a Guess}
+\section{Processing a Guess}
 
 Let's get to it! The first thing we need to do for our guessing game is allow our player to input a guess. Put this in your 
 \code{src/main.rs}:
@@ -311,7 +311,7 @@ You guessed: 6
 
 All right! Our first part is done: we can get input from the keyboard, and then print it back out.
 
-\subsection{Generating a secret number}
+\section{Generating a secret number}
 
 Next, we need to generate a secret number. Rust does not yet include random number functionality in its standard library. 
 The Rust team does, however, provide a \href{https://crates.io/crates/rand}{rand crate}. A 'crate' is a package of Rust 
@@ -496,7 +496,7 @@ You guessed: 5
 
 Great! Next up: comparing our guess to the secret number.
 
-\subsection{Comparting guesses}
+\section{Comparting guesses}
 
 Now that we've got user input, let's compare our guess to the secret number. Here's our next step, though it doesn't quite 
 compile yet:
@@ -697,7 +697,7 @@ and verify that guessing the number works, as well as guessing a number too smal
 
 Now we've got most of the game working, but we can only make one guess. Let's change that by adding loops!
 
-\subsection{Looping}
+\section{Looping}
 
 The \code{loop} keyword gives us an infinite loop. Let's add that in:
 
@@ -934,7 +934,7 @@ fn main() {
 }
 \end{rustc}
 
-\subsection{Complete}
+\section{Complete}
 
 At this point, you have successfully built the Guessing Game! Congratulations!
 
